# nekomake

./: .gitignore  CMakeLists.txt  README.md
shaders/: vert.glsl
src/: basic_generator.cpp  basic_generator.hpp  block.cpp  block.hpp  blockinfo.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_generator.cpp  chunk_generator.hpp  chunk_group.cpp  chunk_group.hpp  chunk_mesh_generator.cpp  chunk_mesh_generator.hpp  constants.cpp  constants.hpp  editor.cpp  editor.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  generic.cpp  generic.hpp  inputs.cpp  inputs.hpp  mesh.cpp  mesh.hpp  nekomake.cpp  nekomake.hpp  play.cpp  play.hpp  shader.cpp  shader.hpp  texture_grid.cpp  texture_grid.hpp  textures.cpp  textures.hpp  timer.cpp  (+4 more)
